--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
+    "react-export-excel": "^0.5.3",
     "react-qr-code": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "read-excel-file": "^5.2.28",
     "rsuite": "^4.10.1",
     "web-vitals": "^1.0.1"
   },
